--- a/src/app/customers/customer-card/customer-card.component.html
+++ b/src/app/customers/customer-card/customer-card.component.html
@@ -14,4 +14,4 @@
     <div class="flex-spacer"></div>
     <button mat-icon-button><mat-icon>share</mat-icon></button>
   </mat-card-actions>
-</mat-card>>
+</mat-card>
