--- a/src/app/messages/message-new/message-new.component.html
+++ b/src/app/messages/message-new/message-new.component.html
@@ -28,7 +28,7 @@
   </mat-step>
   <mat-step [stepControl]="secondFormGroup">
     <form [formGroup]="secondFormGroup">
-      <ng-template matStepLabel>Entetr Recipient Info</ng-template>
+      <ng-template matStepLabel>Enter Message Info</ng-template>
       <mat-form-field>
         <input matInput placeholder="Message" formControlName="messageCtrl" required>
       </mat-form-field>
